# ooblerg

./: .gitignore  README.md
app/: README.md  TODO.md  main.nut  sqgipkg.json
app/certs/: ca-bundle.crt
app/native/: OoblergWin-1.0.windows.gir  build.sh  meson.build  ooblerg-win.c  ooblerg-win.h
app/src/: config.nut  util.nut
app/src/pkg/: manifest.nut  solver.nut  status.nut  transaction.nut
app/src/repo/: cache.nut  client.nut
app/src/sysroot/: install.nut  paths.nut
app/src/system/: path.nut
app/src/ui/: window.nut
app/test/: package_tests.nut
docs/: package-manager-architecture.md  top-50-mingw64-packages.md
manifest/: package-metadata.json  packages.json
ports/appstream/patches/: 0001-appstream-cross-build-library-only.patch
ports/gdb/patches/: 0001-gdb-bfd-build-chew-with-build-flags.patch  0002-gdbsupport-add-printf-attribute-fallback.patch  0003-gdb-prefer-gnulib-headers-before-sysroot.patch
ports/granite-7/patches/: 0001-granite-cross-use-host-machine-system.patch
ports/gstreamer-windows/patches/: 0001-gst-plugins-bad-mingw-d3d11-wasapi2.patch
ports/native-sdk/: git-launcher.c  meson-launcher.c
ports/webkitgtkwin/: README.md  VENDOR.md
server/: README.md  TODO.md  main.nut  sqgipkg.json
server/site/: index.html
server/src/: application.nut  util.nut
server/test/: http_tests.nut  repo_tests.nut
support/gir/: win32-1.0.gir
tools/: ooblerg-dll-forwarder  ooblerg-g-ir-scanner  ooblerg-pe-ldd  ooblerg-remote-wine  ooblerg-wine-launcher  ooblerg-wine-wrapper  ooblerg.nut  ooblerg.py  test-app-gui  win32-1.0.gir
(+50 files in other folders)
